<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.son.minimaltodo.ui.reminder.ReminderViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.reminder.ReminderFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:title="@string/app_name"
                app:titleTextColor="@color/white">

                <TextView
                    android:onClick="@{() -> viewModel.updateTaskBasedOnSnooze()}"
                    android:id="@+id/btnDone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingHorizontal="16dp"
                    android:text="@string/done"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />

            </androidx.appcompat.widget.Toolbar>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginStart="16dp"
                android:gravity="center|start"
                android:text="@{viewModel.task.title}"
                android:textColor="@color/white"
                android:textSize="20sp"
                tools:text="Go jogging" />

        </com.google.android.material.appbar.AppBarLayout>

        <TextView
            android:id="@+id/ivSnooze"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="48dp"
            android:drawablePadding="8dp"
            android:text="@string/snooze"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_clock"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/appCompatSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:selectedItemPosition="@={viewModel.selectedSpinnerValue}"
            android:entries="@array/time_snooze"
            app:layout_constraintBottom_toBottomOf="@+id/ivSnooze"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ivSnooze" />

        <Button
            android:id="@+id/btnRemove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>