<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.son.minimaltodo.ui.add.AddViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.add.AddFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:navigationIcon="@drawable/ic_close" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="32dp"
                android:orientation="vertical"
                android:paddingVertical="32dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title"
                    android:textColor="@color/white"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/edtTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:inputType="text"
                    android:text="@={viewModel.titleInput}"
                    android:textColor="@color/white" />

            </LinearLayout>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/rightGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="36dp" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/leftGuideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_end="36dp" />

            <TextView
                android:id="@+id/tvRemindMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="72dp"
                android:drawablePadding="16dp"
                android:text="@string/remind_me"
                android:textSize="16sp"
                app:drawableStartCompat="@drawable/ic_clock"
                app:layout_constraintStart_toStartOf="@+id/rightGuideline"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchRemindMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="@={viewModel.isNotifyEnabled}"
                app:layout_constraintBottom_toBottomOf="@+id/tvRemindMe"
                app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
                app:layout_constraintTop_toTopOf="@+id/tvRemindMe" />

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:orientation="horizontal"
                app:layout_constraintEnd_toStartOf="@+id/leftGuideline"
                app:layout_constraintStart_toStartOf="@+id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@+id/tvRemindMe">

                <EditText
                    android:id="@+id/edtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="@={viewModel.selectedDate}" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="4dp"
                    android:text="@string/and"
                    android:textColor="?attr/colorSecondary" />

                <EditText
                    android:id="@+id/edtTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:gravity="center"
                    android:text="@={viewModel.selectedTime}"
                    tools:text="10:00 AM" />
            </LinearLayout>

            <TextView
                android:id="@+id/tvResult"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:text="@{@string/reminder_set(viewModel.selectedDate, viewModel.selectedTime)}"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="@+id/rightGuideline"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/send"
            android:onClick="@{() -> viewModel.saveTask()}"
            android:src="@drawable/ic_send"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|end" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>